eZ publish changelog:
---------------------

Changes from 2.2 Beta 1 to 2.2 Beta 2
-----------------------------------
* Added image caption override tag
* Added better search in eZ article. Now handles stop words and word freqyency.

Changes from 2.2 Alpha to 2.2 Beta 1
-----------------------------------
* Added display of which articles/products an image is used in
* Added mime types for known office documents in filemanger
* Added copy of article categories in admin
* Added topic list on user site
* Added search in eZ imagecatalogue
* Added support for IP or Cookie based vote checking in eZ poll
* Added support for custom defined article tags in site.ini
* Added XML generator/renderer support in eZ trade
* Added circular categories in eZ article
* Added option for keeping case of manual keywords for eZ article
* Added support for changing message limit in eZ forum and eZ mail
* Added Signature in eZMail, fixed Preview button bug.
* Added auto check mail, show unread mail features in eZMail (user configurable)
* Added caching in eZ calendar
* Added next/previous in file list in eZ filemanager

Changes from 2.1 to 2.2 Alpha
-----------------------------
* Added vouchers to eZ trade
* Added support for editors group in eZ article
* Added new module eZ mediacatalogue; handles flash, movies etc..
* Added override system for article list and article view templates.
* Added discussion to polls
* Moved preamble/header/footer to one file.
* Added support for PostgreSQL and Informix
* Added cache control in site manager ( possibility to clear cache )
* Added site.ini editing under site manager
* Added custom php/html file upload/edit in sistemanager
* Added possibility to override sender info when sending bulkmails with settings in site.ini
* Added mail to friend script
* Added time un/publising on eZ article
* Added site map and special front page in eZ article (user site)
* Added dynamic generation of site title and meta information.