@@ -132,6 +132,7 @@ CREATE TABLE eZArticle_Category (
   SectionID int NOT NULL default '0',
   ImageID int default NULL,
   EditorGroupID int default '0',
+  ListLimit int default '0',
   PRIMARY KEY (ID)
 );
 
@@ -204,6 +205,7 @@ CREATE TABLE eZArticle_ArticleKeywordFirstLetter (
 CREATE INDEX Article_Name ON eZArticle_Article (Name);
 CREATE INDEX Article_Published ON eZArticle_Article (Published);
 CREATE FULLTEXT INDEX Article_Fulltext ON eZArticle_Article (Contents);
+CREATE FULLTEXT INDEX Article_FulltextName ON eZArticle_Article (Name);
 
 CREATE INDEX Link_ArticleID ON eZArticle_ArticleCategoryLink (ArticleID);
 CREATE INDEX Link_CategoryID ON eZArticle_ArticleCategoryLink (CategoryID);
