@@ -3,6 +3,7 @@ eZ publish changelog:
 
 Changes from 2.2 Beta 1 to 2.2 Beta 2
 -----------------------------------
+* Added modification sorting on article categories.
 * Added image caption override tag
 * Added better search in eZ article. Now handles stop words and word freqyency.
 
